--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SotN-Randomizer",
-  "version": "1.7.13",
+  "version": "1.7.14-0",
   "description": "This is a romhacking tool to randomize some things about `Castlevania: Symphony of the Night`.",
   "main": "index.js",
   "dependencies": {
