--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SotN-Randomizer",
-  "version": "1.7.26",
+  "version": "1.7.27-0",
   "description": "This is a romhacking tool to randomize some things about `Castlevania: Symphony of the Night`.",
   "dependencies": {
     "seedrandom": "^3.0.1",
