--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a romhacking tool to randomize some things about `Castlevania: Symphony of the Night`.",
   "dependencies": {
     "colors": "^1.4.0",
-    "hygen": "^5.0.3",
+    "hygen": "^6.0.4",
     "seedrandom": "^3.0.1",
     "yargs": "^13.2.2"
   },
@@ -22,6 +22,7 @@
     "adventure",
     "speedrun",
     "glitch",
+    "scavenger",
     "empty-hand"
   ],
   "author": "Wild Mouse <3snowp7im@gmail.com>",
