Add April Fools preset

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "speedrun",
     "glitch",
     "scavenger",
-    "empty-hand"
+    "empty-hand",
+    "april-fools"
   ],
   "author": "Wild Mouse <3snowp7im@gmail.com>",
   "license": "WTFPL",
