Fix Holy Glasses not being sold out

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "glitch",
     "scavenger",
     "empty-hand",
-    "april-fools"
+    "gem-farmer"
   ],
   "author": "Wild Mouse <3snowp7im@gmail.com>",
   "license": "WTFPL",
