Add Expedition and Lycanthrope presets

--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "guarded-og",
     "speedrun",
     "bat-master",
+    "lycanthrope",
     "nimble",
-    "glitch",
     "expedition",
+    "glitch",
     "scavenger",
     "empty-hand",
     "gem-farmer",
