Add rat-race preset

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "scavenger",
     "empty-hand",
     "gem-farmer",
-    "third-castle"
+    "third-castle",
+    "rat-race"
   ],
   "engines": {
     "node": ">=15"
