--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a romhacking tool to randomize some things about `Castlevania: Symphony of the Night`.",
   "dependencies": {
     "colors": "^1.4.0",
-    "hygen": "^6.0.4",
+    "hygen": "^6.2.11",
     "seedrandom": "^3.0.1",
     "yargs": "^17.3.0"
   },
@@ -18,6 +18,8 @@
   },
   "presets": [
     "casual",
+    "forge",
+    "jordans",
     "safe",
     "adventure",
     "og",
@@ -34,7 +36,10 @@
     "gem-farmer",
     "third-castle",
     "rat-race",
-    "hunter"
+    "hunter",
+    "bountyhunter",
+    "souls",
+    "boss-rush"
   ],
   "engines": {
     "node": ">=15"
