Added presets to package.json and index.js
Updated build/index.js and package.json to include other presets required for the Bot.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     "big-toss",
     "bountyhunter",
     "bountyhunter-tc",
-    "hitman"
+    "hitman",
+    "chaos-lite",
+    "beyond",
+    "breach",
+    "grand-tour",
+    "crash-Course",
+    "forge",
+    "lookingglass",
+    "skinwalker",
+    "summoner"
   ],
   "engines": {
     "node": ">=15"
