--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "forge",
     "lookingglass",
     "skinwalker",
-    "summoner"
+    "summoner",
+    "agonizetwtw"
   ],
   "engines": {
     "node": ">=15"
