Added Season 2 Safe and Open presets
Part of the historical perspective line, season 2 safe and open presets. Good ideas that are also popular

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "lookingglass",
     "skinwalker",
     "summoner",
-    "agonizetwtw"
+    "agonizetwtw",
+    "stwosafe",
+    "open"
   ],
   "engines": {
     "node": ">=15"
