Change bountyhunter-tc to bountyhuntertc
Compatibility issues

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "aperture",
     "big-toss",
     "bountyhunter",
-    "bountyhunter-tc",
+    "bountyhuntertc",
     "hitman",
     "chaos-lite",
     "beyond",
