More Options and Brawler
Added Brawler preset.
Added Infinite Wing Smash mode, Fast Warps mode, and No Prologue mode.
Adjusted options layout to ease confusion.
Added Wanderer and Tourist extensions as options to website.
Added check counts to extension descriptions.
Added generation time as an output when using spoilers in Command Line.
Added $5000 chest to items list. (May or may not appear)
Changed how Maria First Meeting room spawns removing the need to change how time attack reads for it.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "summoner",
     "agonizetwtw",
     "stwosafe",
-    "open"
+    "open",
+    "brawler"
   ],
   "engines": {
     "node": ">=15"
