Adjust package.json

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "beyond",
     "breach",
     "grand-tour",
-    "crash-Course",
+    "crash-course",
     "forge",
     "lookingglass",
     "skinwalker",
