Added first castle preset. Added open as inheritable preset.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "agonizetwtw",
     "stwosafe",
     "open",
-    "brawler"
+    "brawler",
+    "first-castle"
   ],
   "engines": {
     "node": ">=15"
