Bingo and fix enemies.js
revert flip between Sword Lord and Medusa Head

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "open",
     "brawler",
     "first-castle",
-    "luckysevens"
+    "luckysevens",
+    "bingo"
   ],
   "engines": {
     "node": ">=15"
