Update preset weighting and add Spellbound and Mobility

--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "luckysevens",
     "bingo",
     "sightseer",
-    "cursed-night"
+    "cursed-night",
+    "spellbound",
+    "mobility"
   ],
   "engines": {
     "node": ">=15"
