re-added sequence breaker to site

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "adventure",
     "og",
     "guarded-og",
-    "speedrun",
+    "sequence-breaker",
     "lycanthrope",
     "warlock",
     "nimble",
