Updated preset metadata and descriptions. Renamed Forge to any-perecent

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "breach",
     "grand-tour",
     "crash-course",
-    "forge",
+    "any-percent",
     "lookingglass",
     "skinwalker",
     "summoner",
