Undo unecessary commit because GitHub has issues

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "first-castle",
     "luckysevens",
     "bingo",
-    "sightseer",
+    "sight-seer",
     "cursed-night",
     "spellbound",
     "mobility"
