re-named two-word presets to have similar formatting to others

--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "lookingglass",
     "skinwalker",
     "summoner",
-    "agonizetwtw",
-    "stwosafe",
+    "agonize-twtw",
+    "safe-stwo",
     "open",
     "brawler",
     "first-castle",
-    "luckysevens",
+    "lucky-sevens",
     "bingo",
     "sight-seer",
     "cursed-night",
