Updated Glitch and Glitchmaster, re-added presets to Package, corrected Index.html

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "sight-seer",
     "cursed-night",
     "spellbound",
-    "mobility"
+    "mobility",
+    "glitchmaster",
+    "dog-life"
   ],
   "engines": {
     "node": ">=15"
