Three Presets added, randomRelic changed, RandomHexChar added
Added new pool shuffle methods including fixing randomRelic.

Added Battle Mage, Chimera, and Timeline presets

--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "spellbound",
     "mobility",
     "glitchmaster",
-    "dog-life"
+    "dog-life",
+    "battle-mage",
+    "timeline",
+    "chimera"
   ],
   "engines": {
     "node": ">=15"
