--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "dog-life",
     "battle-mage",
     "timeline",
-    "chimera"
+    "chimera",
+    "april-fools"
   ],
   "engines": {
     "node": ">=15"
