Added Vanilla Preset
Added Vanilla Preset

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "battle-mage",
     "timeline",
     "chimera",
-    "april-fools"
+    "april-fools",
+    "vanilla"
   ],
   "engines": {
     "node": ">=15"
