--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "all-bosses",
     "boss-reflector",
     "nimble-lite",
-    "rampage"
+    "rampage",
+    "cornivus"
   ],
   "engines": {
     "node": ">=15"
