Preset additions and updates
Added Max Rando preset and updated Seeker to have more streamlined opening.

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "boss-reflector",
     "nimble-lite",
     "rampage",
-    "cornivus"
+    "cornivus",
+    "max-rando"
   ],
   "engines": {
     "node": ">=15"
