preset updates and add recycler

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SotN-Randomizer",
-  "version": "25.05.22",
+  "version": "25.05.23",
   "description": "This is a romhacking tool to randomize some things about `Castlevania: Symphony of the Night`.",
   "dependencies": {
     "colors": "^1.4.0",
@@ -76,7 +76,8 @@
     "rampage",
     "cornivus",
     "max-rando",
-    "mirror-breaker"
+    "mirror-breaker",
+    "recycler"
   ],
   "engines": {
     "node": ">=15"
